--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="LET Innovations - Premium electronics components, IoT devices, Arduino, ESP32, Raspberry Pi, sensors, and embedded systems. Expert tech solutions for hardware, software development, IoT automation, AI/ML, and solar systems in Nigeria.">
+        content="LET Innovations - let innovation, Premium electronics components, IoT devices, Arduino, ESP32, Raspberry Pi, sensors, and embedded systems. Expert tech solutions for hardware, software development, IoT automation, AI/ML, and solar systems in Minna, Nigeria.">
     <meta name="keywords"
-        content="LET Innovations, electronics, Arduino, ESP32, Raspberry Pi, IoT, embedded systems, sensors, smartwatch, electronics repair, software development, AI/ML, solar systems, Nigeria">
+        content="LET Innovations, let innovation, drone, gps module, ultrasonic sensor, electronics, Arduino, ESP32, Raspberry Pi, IoT, embedded systems, sensors, smartwatch, electronics repair, software development, AI/ML, solar systems, Nigeria">
     <meta name="author" content="LET Innovations">
     <meta name="theme-color" content="#6b4b9f">
     <!-- Added Open Graph and Twitter Card meta tags for better social sharing -->
     <meta property="og:title" content="LET Innovations - Electronics & IoT Solutions">
     <meta property="og:description"
-        content="Professional electronics, IoT devices, and embedded systems solutions. Shop premium components and expert services.">
+        content="Professional electronics, IoT devices, and embedded systems solutions. AI-driven tech for smarter living. Shop premium components and expert services.">
     <meta property="og:image" content="img/let_logo.png">
     <meta property="og:type" content="business.business">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="LET Innovations - Electronics & IoT Solutions">
     <meta name="twitter:description" content="Professional electronics and IoT solutions">
     <!-- Added canonical URL for SEO -->
-    <link rel="canonical" href="https://letinnovations.com">
+    <link rel="canonical" href="https://letinnovations.store">
     <title>LET Innovations - Electronics, IoT & Embedded Systems Solutions</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -28,8 +28,8 @@
 <body>
     <!-- Splash Screen -->
     <div id="splash-screen">
-        <h1 class="splash-text">LET INNOVATION</h1>
-        <div class="splash-loading">HADSOD TECHNOLOGY...</div>
+        <h1 class="splash-text">LET INNOVATIONS</h1>
+        <div class="splash-loading">innovation beyond the box...</div>
     </div>
 
     <!-- Header -->
@@ -40,7 +40,7 @@
                     <a href="mailto:letinnovation69@gmail.com">📧 letinnovation69@gmail.com</a>
                 </li>
                 <li>
-                    <a href="tel:+2348100428881">📞 +2348100428881</a>
+                    <a href="tel:+2348100428881">📞 +2348100428881 (Whatsapp)</a>
                 </li>
             </ul>
         </div>
@@ -151,3 +151,4 @@
 </body>
 
 </html>
+
