--- a/index.html
+++ b/index.html
@@ -1,168 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="LET Innovations - let innovation, Premium electronics components, IoT devices, Arduino, ESP32, Raspberry Pi, sensors, and embedded systems. Expert tech solutions for hardware, software development, IoT automation, AI/ML, and solar systems in Minna, Nigeria.">
-    <meta name="keywords"
-        content="LET Innovations, let innovation, drone, gps module, ultrasonic sensor, electronics, Arduino, ESP32, Raspberry Pi, IoT, embedded systems, sensors, smartwatch, electronics repair, software development, AI/ML, solar systems, Nigeria">
-    <meta name="author" content="LET Innovations">
-    <meta name="theme-color" content="#6b4b9f">
-    <meta property="og:title" content="LET Innovations - Electronics & IoT Solutions">
-    <meta property="og:description"
-        content="Professional electronics, IoT devices, and embedded systems solutions. AI-driven tech for smarter living. Shop premium components and expert services.">
-    <meta property="og:image" content="img/let_logo.png">
-    <meta property="og:type" content="business.business">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="LET Innovations - Electronics & IoT Solutions">
-    <meta name="twitter:description" content="Professional electronics and IoT solutions">
-    <link rel="canonical" href="https://letinnovations.store">
-    <title>LET Innovations - Electronics, IoT & Embedded Systems Solutions</title>
-    <link rel="stylesheet" href="letinnovation.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="LET Innovations - let innovation, Premium electronics components, IoT devices, Arduino, ESP32, Raspberry Pi, sensors, and embedded systems. Expert tech solutions for hardware, software development, IoT automation, AI/ML, and solar systems in Minna, Nigeria.">
+  <meta name="keywords" content="LET Innovations, electronics components, Arduino, ESP32, Raspberry Pi, sensors, computers, iPhones, smartphones, gadgets, IoT, embedded systems, AI, solar systems, Nigeria">
+  <meta name="author" content="LET Innovations">
+  <meta name="theme-color" content="#6b4b9f">
+  <link rel="canonical" href="https://letinnovations.store">
+  <title>LET Innovations - Electronics, IoT & Embedded Systems Solutions</title>
+  <link rel="stylesheet" href="letinnovation.css">
 
-    <!-- Fade-out CSS for landing page -->
-    <style>
-      /* Wrap the whole landing page */
-      #landing-wrapper {
-        transition: opacity 1s ease;
-      }
-      .fade-out {
-        opacity: 0;
-      }
-      /* Ensure fade-out container covers entire viewport */
-      body, html {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-      }
-    </style>
+  <!-- Fade effect -->
+  <style>
+    #landing-wrapper {
+      transition: opacity 1s ease;
+    }
+    .fade-out {
+      opacity: 0;
+    }
+    #flutter-container {
+      opacity: 0;
+      transition: opacity 1s ease;
+    }
+    #flutter-container.visible {
+      opacity: 1;
+    }
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-    <!-- Wrap entire landing page -->
-    <div id="landing-wrapper">
-        <!-- Landing Page / Splash Content -->
-        <header>
-            <div class="header-top">
-                <ul class="contact-info">
-                    <li><a href="mailto:letinnovation69@gmail.com">📧 letinnovation69@gmail.com</a></li>
-                    <li><a href="tel:+2348100428881">📞 +2348100428881 (Whatsapp)</a></li>
-                </ul>
-            </div>
-        </header>
 
-        <nav class="navbar">
-            <div class="logo-section">
-                <img src="img/let_symbol.png" alt="LET Symbol" class="logo-symbol">
-                <img src="img/let_logo.png" alt="LET Logo" class="logo-text">
-            </div>
-            <form class="search-form" role="search">
-                <input type="search" name="search" id="search" placeholder="Search products..." title="Search your favorite products">
-                <button type="submit" aria-label="Search">SEARCH</button>
-            </form>
-            <ul class="nav-links">
-                <li><a href="akolo.html">HOME</a></li>
-                <li><a href="https://letinnovations.store/">LOGIN</a></li>
-            </ul>
-            <button class="mobile-menu-toggle" aria-label="Toggle menu">☰</button>
-        </nav>
-
-        <main>
-            <section class="products-section">
-                <div class="products-container">
-                    <h1 class="section-title">POPULAR HARDWARE PRODUCTS</h1>
-                    <div class="product-grid" id="product-grid"></div>
-                </div>
-            </section>
-
-            <section class="services-section">
-                <h2>LETI Professional Services</h2>
-                <ul class="services-grid">
-                    <li><a href="https://letinnovations.store">Software Development (Web, App)</a></li>
-                    <li><a href="https://letinnovations.store">Embedded Systems - IoT & Automation</a></li>
-                    <li><a href="https://letinnovations.store">Phones and Systems Repair</a></li>
-                    <li><a href="https://letinnovations.store">Artificial Intelligence - Machine Learning</a></li>
-                    <li><a href="https://letinnovations.store">Solar and Inverter Systems Design</a></li>
-                    <li><a href="https://letinnovations.store">Co-Working Lab - Exclusive Workspace</a></li>
-                    <li><a href="https://letinnovations.store">Sales of Electronic Components</a></li>
-                    <li><a href="https://letinnovations.store">Computer Cafe Services</a></li>
-                    <li><a href="https://letinnovations.store">Other Services</a></li>
-                </ul>
-            </section>
-
-            <section class="contact-section">
-                <h2>Contact LET Innovations</h2>
-                <p>Have questions? Drop your message below — we'll reply soon!</p>
-                <form id="contact-form" class="contact-form">
-                    <div class="form-group">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" placeholder="Your full name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" placeholder="Your email address" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message:</label>
-                        <textarea id="message" name="message" rows="5" placeholder="Type your message..." required></textarea>
-                    </div>
-                    <div id="drop-zone" class="drop-zone">
-                        <p>Drag & Drop files here or click to upload</p>
-                        <input type="file" id="file-input" multiple style="display: none;">
-                    </div>
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </form>
-                <div id="contact-status" class="contact-status"></div>
-            </section>
-        </main>
-
-        <footer>
-            <div class="footer-content">
-                <div class="newsletter-section">
-                    <h3>Subscribe to Our Newsletters</h3>
-                    <p>Get email updates about our latest discount offers and new products</p>
-                    <form class="newsletter-form">
-                        <input type="email" name="subscribe" placeholder="example@email.com" required>
-                        <button type="submit">SUBSCRIBE</button>
-                    </form>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 LET Innovations. All rights reserved.</p>
-            </div>
-        </footer>
+  <!-- Landing Page Wrapper -->
+  <div id="landing-wrapper">
+    <div id="redirect-message">
+        <p>Redirecting to main website...</p>
+        <div class="spinner"></div>
     </div>
 
-    <!-- Load Flutter Web in background and fade out landing -->
-    <script>
-        var flutterScript = document.createElement('script');
-        flutterScript.src = "flutter_bootstrap.js";
-        flutterScript.async = true;
+    <header>
+      <div class="header-top">
+        <ul class="contact-info">
+          <li><a href="mailto:letinnovation69@gmail.com">📧 letinnovation69@gmail.com</a></li>
+          <li><a href="tel:+2348100428881">📞 +2348100428881 (Whatsapp)</a></li>
+        </ul>
+      </div>
+    </header>
 
-        flutterScript.onload = function() {
-            if (window._flutter) {
-                window._flutter.loader.loadEntrypoint({
-                    onEntrypointLoaded: function(engineInitializer) {
-                        engineInitializer.initializeEngine().then(function(appRunner) {
-                            // Fade out the landing wrapper completely
-                            const wrapper = document.getElementById('landing-wrapper');
-                            wrapper.classList.add('fade-out');
+    <nav class="navbar">
+      <div class="logo-section">
+        <img src="img/let_symbol.png" alt="LET Symbol" class="logo-symbol">
+        <img src="img/let_logo.png" alt="LET Logo" class="logo-text">
+      </div>
 
-                            // Wait for transition (1s)
-                            setTimeout(() => {
-                                wrapper.remove(); // Remove landing completely
-                                appRunner.runApp(); // Start Flutter Web
-                            }, 1000);
-                        });
-                    }
-                });
-            }
-        };
+      <form class="search-form" role="search">
+        <input type="search" name="search" id="search" placeholder="Search products..." title="Search your favorite products">
+        <button type="submit" aria-label="Search">SEARCH</button>
+      </form>
+      <ul class="nav-links">
+        <li><a href="akolo.html">HOME</a></li>
+        <li><a href="https://letinnovations.store/">LOGIN</a></li>
+      </ul>
+      <button class="mobile-menu-toggle" aria-label="Toggle menu">☰</button>
+    </nav>
 
-        document.body.appendChild(flutterScript);
-    </script>
+    <main>
+      <section class="products-section">
+        <div class="products-container">
+          <h1 class="section-title">POPULAR HARDWARE PRODUCTS</h1>
+          <div class="product-grid" id="product-grid"></div>
+        </div>
+      </section>
 
-    <script src="letinnovation.js"></script>
+      <section class="services-section">
+        <h2>LETI Professional Services</h2>
+        <ul class="services-grid">
+          <li><a href="https://letinnovations.store">Software Development (Web, App)</a></li>
+          <li><a href="https://letinnovations.store">Embedded Systems - IoT & Automation</a></li>
+          <li><a href="https://letinnovations.store">Phones and Systems Repair</a></li>
+          <li><a href="https://letinnovations.store">Artificial Intelligence - Machine Learning</a></li>
+          <li><a href="https://letinnovations.store">Solar and Inverter Systems Design</a></li>
+          <li><a href="https://letinnovations.store">Co-Working Lab - Exclusive Workspace</a></li>
+          <li><a href="https://letinnovations.store">Sales of Electronic Components</a></li>
+          <li><a href="https://letinnovations.store">Computer Cafe Services</a></li>
+          <li><a href="https://letinnovations.store">Other Services</a></li>
+        </ul>
+      </section>
+
+      <section class="contact-section">
+        <h2>Contact LET Innovations</h2>
+        <p>Have questions? Drop your message below — we'll reply soon!</p>
+        <form id="contact-form" class="contact-form">
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Your full name" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Your email address" required>
+          </div>
+          <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" placeholder="Type your message..." required></textarea>
+          </div>
+          <div id="drop-zone" class="drop-zone">
+            <p>Drag & Drop files here or click to upload</p>
+            <input type="file" id="file-input" multiple style="display: none;">
+          </div>
+          <button type="submit" class="submit-btn">Send Message</button>
+        </form>
+        <div id="contact-status" class="contact-status"></div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="footer-content">
+        <div class="newsletter-section">
+          <h3>Subscribe to Our Newsletters</h3>
+          <p>Get email updates about our latest discount offers and new products</p>
+          <form class="newsletter-form">
+            <input type="email" name="subscribe" placeholder="example@email.com" required>
+            <button type="submit">SUBSCRIBE</button>
+          </form>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 LET Innovations. All rights reserved.</p>
+      </div>
+    </footer>
+  </div>
+
+  <!-- Flutter Web Container -->
+  <div id="flutter-container"></div>
+
+  <!-- Load Flutter Web and fade in -->
+  <script>
+    var flutterScript = document.createElement('script');
+    flutterScript.src = "flutter_bootstrap.js";
+    flutterScript.async = true;
+
+    flutterScript.onload = function() {
+      if (window._flutter) {
+        window._flutter.loader.loadEntrypoint({
+          onEntrypointLoaded: function(engineInitializer) {
+            engineInitializer.initializeEngine().then(function(appRunner) {
+              // Fade out landing page
+              const landing = document.getElementById('landing-wrapper');
+              landing.classList.add('fade-out');
+
+              // Wait for fade-out transition
+              setTimeout(() => {
+                landing.remove();
+
+                // Run Flutter Web inside flutter-container
+                const container = document.getElementById('flutter-container');
+                container.classList.add('visible');
+                appRunner.runApp(container);
+              }, 1000);
+            });
+          }
+        });
+      }
+    };
+
+    document.body.appendChild(flutterScript);
+  </script>
+
+  <script src="letinnovation.js"></script>
 </body>
 </html>
