--- a/index.html
+++ b/index.html
@@ -554,42 +554,51 @@
 
     <!-- Transition Script -->
     <script>
-        // Monitor Flutter app readiness and fade transition
         function initializeFlutterTransition() {
-            // Check if Flutter has initialized
+            // Check if Flutter has initialized by detecting Flutter app elements
             const checkFlutterReady = setInterval(() => {
-                // Flutter sets window.flutterWebLoader and window.flutter when loaded
-                if (window.flutter && window.flutter.isReady) {
+                // Flutter creates a div with id "flutter-app" or modifies the body
+                const flutterApp = document.querySelector('flt-viewer') || 
+                                   document.querySelector('[data-dart-type]') ||
+                                   window.flutterWebLoader;
+                
+                if (flutterApp || (window.flutter && window.flutter.engineInitialized)) {
                     clearInterval(checkFlutterReady);
                     transitionToFlutter();
                 }
             }, 100);
 
-            // Timeout safety: transition after 30 seconds regardless
+            // Timeout safety: transition after 15 seconds (Flutter usually loads faster)
             setTimeout(() => {
                 clearInterval(checkFlutterReady);
-                if (window.flutter) {
-                    transitionToFlutter();
-                }
-            }, 30000);
+                transitionToFlutter();
+            }, 15000);
         }
 
         function transitionToFlutter() {
             const landingContainer = document.getElementById('landing-page-container');
             const flutterContainer = document.getElementById('flutter-container');
 
-            // Start fade out of landing page and fade in of Flutter
+            // Start fade out of landing page
             landingContainer.classList.add('fade-out');
+            
+            // Start fade in of Flutter
             flutterContainer.classList.add('fade-in');
 
-            // Completely remove landing page from DOM after transition
+            // Completely remove landing page from DOM and prevent any interaction
             setTimeout(() => {
-                landingContainer.style.display = 'none';
+                landingContainer.remove();
+                // Ensure body is clean and Flutter has full control
+                document.body.style.overflow = 'auto';
             }, 800);
         }
 
         // Start monitoring when page loads
-        window.addEventListener('DOMContentLoaded', initializeFlutterTransition);
+        if (document.readyState === 'loading') {
+            document.addEventListener('DOMContentLoaded', initializeFlutterTransition);
+        } else {
+            initializeFlutterTransition();
+        }
     </script>
 </body>
 </html>
