--- a/index.html
+++ b/index.html
@@ -584,6 +584,8 @@
 
     <!-- Transition Script -->
     <script>
+        var serviceWorkerVersion = null;
+
         function initializeFlutterTransition() {
             // Start loading the Flutter app once the document is ready.
             window.addEventListener('load', function (ev) {
