--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <link rel="icon" href="logo.png" sizes="512x512" type="image/png">
 
     <title>LET Innovations - Electronics, Computers, Gadgets, SmartPhones, Smart Devices, IoT, Raspberry pi, Arduino, Esp32 Components in Nigeria</title>
-    <!-- Updated manifest path to point to /app/ folder -->
-    <link rel="manifest" href="app/manifest.json">
+    <!-- Updated manifest path to point to root folder -->
+    <link rel="manifest" href="manifest.json">
 
     <!-- Cloudinary Upload Widget -->
     <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>
@@ -641,8 +641,8 @@
         }
     </script>
 
-    <!-- Updated flutter_bootstrap.js path to point to /app/ folder -->
-    <script src="app/flutter_bootstrap.js" async></script>
+    <!-- Updated flutter_bootstrap script path to root folder -->
+    <script src="flutter_bootstrap.js"></script>
 
     <!-- Load letinnovation.js for product loading functionality -->
     <script src="letinnovation.js"></script>
